Fix footer positioning by aligning it to the left edge of the viewport

--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -3,7 +3,7 @@
     color: white;
     text-align: center;
     position: fixed;
-    left: 20px;
+    left: 0px;
     bottom: 0;
     width: calc(100vw - var(--scrollbar-width));
     height: var(--footer-height);
